--- a/style.css
+++ b/style.css
@@ -756,7 +756,7 @@ h4 {
 }
 
 .black-background {
-  background-color: rgba(165, 147, 99, 0.7);
+  background-color: rgb(60 51 29 / 70%);
   padding: 40px 40px 40px 40px;
 }
 
